fixed the UI bug on icon alignment in contract modal.

--- a/src/theme/css/style.scss
+++ b/src/theme/css/style.scss
@@ -343,7 +343,7 @@ p {
 
   span {
     // font-weight: 800;
-    font-family: $boldtext-font-family;
+    // font-family: $boldtext-font-family;
     &.input-field {
       font-weight: 400;
       font-family: $regulartext-font-family;
